improvement/data-tooltip

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
     <!-- Importando arquivo com estilo -->
-    <link rel="stylesheet" href="assets/css/style.css"/>  
+    <link rel="stylesheet" href="assets/css/style.css"/>  <!-- Importando arquivo com estilo com temporizador para efeito da borda nas divs-->
+    
     
     <!-- Importando imagem para barra de endereço -->
     <link rel="sortcut icon" href="favicon.ico" type="image/x-icon" />
@@ -34,7 +35,7 @@
                         </a>
                     </div>    
                     <div class="column column-right">
-                        <a href="https://julianamariasousamesquita.github.io/JulianaMariaSousaMesquita/" target="_blank"><h1> Estágio - Desenvolvimento de Sistemas</h1></a>
+                        <a href="https://julianamariasousamesquita.github.io/JulianaMariaSousaMesquita/" target="_blank"><h1>Estágio - Desenvolvimento de Sistemas</h1></a>
                         <nav>
                             <ul>
                                 <li><p>TAREFAS DIÁRIAS PETROS</p></li>                          
@@ -69,7 +70,7 @@
                                 <li><p>Analisar descrição do csp</p></li>
                                 <li><p>Criar script de alteração de dados</p></li>
                                 <li><p>Validar script com líder de squad</p></li> 
-                                <li><p>ALM</p></li>                                              
+                                <li><a href="https://blog.betrybe.com/tecnologia/o-que-e-alm/" data-tooltip="Método usado para gerenciar o desenvolvimento de softwares, Gerenciamento do Ciclo de Vida de Aplicações." target="_blank"><p>ALM</p></a></li>                                              
                             </ul>  
                             <span class="bootom-left"></span>
                         </section>
@@ -82,7 +83,7 @@
                             <ul>                        
                                 <li><p>Concluir pendências</p></li>
                                 <li><p>Buscar demanda do dia para atuar</p></li>
-                                <li><p>Daily</p></li>                                    
+                                <li><a href="https://kenzie.com.br/blog/o-que-e-daily/" data-tooltip="Reunião diária, deve durar 15 minutos." target="_blank"><p>Daily</p></a></li>                                    
                             </ul>   
                         <span class="bootom-left"></span>
                     </section>
