--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <h2>Decorrer da jornada</h2>
                             <ul>                        
                                 <li><p>Concluir pendências</p></li>
-                                <li><p>Buscar demanda do dia para atuar</p></li>
+                                <li><p>Iniciar nova demanda</p></li>
                                 <li><a href="https://kenzie.com.br/blog/o-que-e-daily/" data-tooltip="Reunião diária, deve durar 15 minutos." target="_blank"><p>Daily</p></a></li>                                    
                             </ul>   
                         <span class="bootom-left"></span>
