improvement/alter text index.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                         <section>
                             <span class="top-right"></span>
-                            <h2>CSP - Alteração de dados</h2>
+                            <h2>CSP - Alteração de dados/Manutenção/Análise de problema</h2>
                             <ul>                        
                                 <li><p>Analisar descrição do csp</p></li>
                                 <li><p>Criar script de alteração de dados</p></li>
