--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                 <li><p>Analisar descrição do csp</p></li>
                                 <li><p>Criar script de alteração de dados</p></li>
                                 <li><p>Validar script com líder de squad</p></li> 
-                                <li><a href="https://blog.betrybe.com/tecnologia/o-que-e-alm/" data-tooltip="Método usado para gerenciar o desenvolvimento de softwares, Gerenciamento do Ciclo de Vida de Aplicações." target="_blank"><p>ALM</p></a></li>                                              
+                                <li><a href="https://blog.betrybe.com/tecnologia/o-que-e-alm/" data-tooltip="Método usado para gerenciar o desenvolvimento de softwares, Gerenciamento do Ciclo de Vida de Aplicações." target="_blank"><b><p>ALM</p></b></a></li>                                              
                             </ul>  
                             <span class="bootom-left"></span>
                         </section>
@@ -83,7 +83,7 @@
                             <ul>                        
                                 <li><p>Concluir pendências</p></li>
                                 <li><p>Iniciar nova demanda</p></li>
-                                <li><a href="https://kenzie.com.br/blog/o-que-e-daily/" data-tooltip="Reunião diária, deve durar 15 minutos." target="_blank"><p>Daily</p></a></li>                                    
+                                <li><a href="https://kenzie.com.br/blog/o-que-e-daily/" data-tooltip="Reunião diária, deve durar 15 minutos." target="_blank"><b><p>Daily</p></b></a></li>                                    
                             </ul>   
                         <span class="bootom-left"></span>
                     </section>
